--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.6)
-project(avcleaner LANGUAGES CXX C)
+project(novaoutcast LANGUAGES CXX C)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -17,7 +17,7 @@ message(STATUS "Using ClangConfig.cmake in: ${CLANG_CMAKE_DIR}")
 list(APPEND CMAKE_MODULE_PATH ${LLVM_DIR})
 include(HandleLLVMOptions)
 
-add_executable(avcleaner.bin
+add_executable(novaoutcast.bin
         main.cpp
         MatchHandler.cpp
         Globals.cpp
@@ -28,7 +28,7 @@ link_directories(${LLVM_LIBRARY_DIRS})
 add_definitions(${LLVM_DEFINITIONS})
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Wno-unused-parameter -fno-strict-aliasing -fno-rtti -I/usr/include -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -L/usr/lib ")
 
-#target_link_libraries(avcleaner.bin LLVM clangTooling clangToolingInclusions clangLex clangToolingCore clangAST clangASTMatchers clangBasic clangFrontend clangFrontendTool clangRewrite clangRewriteFrontend clangSerialization
+#target_link_libraries(novaoutcast.bin LLVM clangTooling clangToolingInclusions clangLex clangToolingCore clangAST clangASTMatchers clangBasic clangFrontend clangFrontendTool clangRewrite clangRewriteFrontend clangSerialization
 
-target_link_libraries(avcleaner.bin LLVM clang-cpp stdc++)
+target_link_libraries(novaoutcast.bin LLVM clang-cpp stdc++)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
